<resources>
    <string name="app_name">MindfulNest</string>
    <string name="menu_emotions">Emotions</string>
    <string name="menu_coping_skills">Coping Skills</string>
    <string name="menu_classrooms">Classrooms</string>
    <string name="menu_students">Students</string>
    <string name="menu_section_teacher">Teacher Section</string>
    <string name="menu_section_student">Student Section</string>
    <string name="menu_web">Web View</string>
    <string name="choose_emotion_prompt">How are you feeling?</string>
    <string name="what_feeling_prompt">What feeling did you describe?</string>
    <string name="talk_about_it">Talk About It</string>
    <string name="choose_coping_skill_placeholder">Placeholder text for Coping Skill</string>
    <string name="choose_classroom_prompt">Choose Class</string>
    <string name="heart_beating_prompt1">Place your hand on your heart.</string>
    <string name="heart_beating_prompt2">How fast is your heart beating?</string>
    <string name="heart_beating_slow">Beating Slow</string>
    <string name="heart_beating_fast">Beating Fast</string>
    <string name="finished_exercise_prompt">How are you feeling now that you have finished the exercise?</string>
    <string name="finished_exercise_sad">Sad</string>
    <string name="finished_exercise_ok">OK</string>
    <string name="finished_exercise_happy">Happy</string>
    <string name="use_words_prompt">Do you want to use words to describe how you feel now that you have finished the exercise?</string>
    <string name="record_prompt">Press the button to record how you are feeling.</string>
    <string name="move_on_prompt">Are you ready to move on?</string>
    <string name="rejoin_friends_prompt">Do you feel ready to rejoin your friends?</string>
    <string name="mindfulnest_header_active_class">Active Class</string>
    <string name="mindfulnest_header_classes">Classes</string>
    <string name="mindfulnest_header_coping_skills">Coping Skills</string>
    <string name="mindfulnest_header_emotions">Emotions</string>
    <string name="mindfulnest_header_settings">Settings</string>
    <string name="classroom_header_stats">Stats</string>
    <string name="classroom_header_students">Students</string>
    <string name="classroom_header_coping_skills">Coping Skills</string>
    <string name="classroom_header_emotions">Emotions</string>
    <string name="classroom_grid_label_students">Students</string>
    <string name="classroom_grid_label_coping_skills">Coping Skills</string>
    <string name="coping_skill_flower_placeholder">Flower Text will go here</string>
    <string name="coping_skill_flower_step_1_hold">Hold the flower and press the button on the stem.</string>
    <string name="coping_skill_flower_step_2_smell">Smell the flower</string>
    <string name="coping_skill_flower_step_3_blow">Blow on the flower</string>
    <string name="coping_skill_flower_overlay">Would you like to do flower breathing again?</string>
    <string name="coping_skill_flower_standalone_step_1">Hold the flower</string>
    <string name="coping_skill_static_placeholder">Static Coping Skill Text will go here</string>
    <string name="coping_skill_cuddle_no_manipulative">Pet the sheep to make the hearts appear.</string>
    <string name="coping_skill_cuddle_no_manipulative_overlay">Would you like to keep petting the sheep?</string>
    <string name="coping_skill_dance">Make up a dance to show how you feel.</string>
    <string name="coping_skill_static_squeeze">Squeeze the squeezer until you feel in control.</string>
    <string name="coping_skill_squeeze">Squeeze the squeezer until you feel in control.</string>
    <string name="coping_skill_jumping_jacks">Let\'s do some jumping jacks!</string>
    <string name="coping_skill_wand">Slowly wave the wand to make the music play.</string>
    <string name="coping_skill_wand_standalone">Touch the wand. Slowly move the wand back and forth to make the music play.</string>
    <string name="coping_skill_wand_standalone_overlay">Would you like to keep moving with the music?</string>
    <string name="coping_skill_share">Invite a friend to play with you!</string>
    <string name="coping_skill_teacher">Talk to your teacher about how you are feeling.</string>
    <string name="coping_skill_sheep_hug">Give the sheep a hug to make the hearts appear.</string>
    <string name="coping_skill_sheep_overlay">Would you like to keep hugging the sheep?</string>
    <string name="overlay_placeholder">Do you need more time?</string>
    <string name="teacher_login_prompt">Enter your password to access teacher settings.</string>
    <string name="teacher_login_button">Submit</string>
    <string name="teacher_login_error">Incorrect password.</string>
    <string name="coping_skill_squeeze_overlay">Would you like to do the squeezing activity again?</string>
    <string name="teacher_student_edit_photo"><u>Re-take Photo</u></string>
    <string name="label_student_name">Student Name</string>
    <string name="label_student_notes">Notes</string>
    <string name="label_student_photo">Student Photo</string>
    <string name="label_coping_skill_name">Coping Skill Name</string>
    <string name="label_coping_skill_notes">Notes</string>
    <string name="label_coping_skill_photo">Coping Skill Photo</string>
    <string name="alert_title_delete_student">Delete Student</string>
    <string name="alert_message_delete_student">Are you sure you want to permanently delete this student?</string>
    <string name="alert_title_delete_classroom">Delete Classroom</string>
    <string name="alert_message_delete_classroom">WARNING: This action will also delete every student connected to this classroom. Are you sure you want to permanently delete this classroom?\n\nConfirm this action by typing the class name \'%s\' and pressing the Delete button.</string>
    <string name="alert_title_new_classroom">New Classroom</string>
    <string name="alert_message_new_classroom">Enter a name for this classroom.</string>
    <string name="alert_title_update_classroom">Edit Classroom </string>
    <string name="alert_message_update_classroom">Choose a new name for this classroom.</string>
    <string name="toast_delete_classroom_message">Input does not match class name.</string>
    <string name="alert_option_delete">Delete</string>
    <string name="alert_option_cancel">Cancel</string>
    <string name="alert_option_create">Create</string>
    <string name="alert_option_save">Save</string>
    <string name="alert_option_confirm">Confirm</string>
    <string name="teacher_section_settings_change_password"><u>Change Teacher Password</u></string>
    <string name="teacher_section_settings_configure_pairing_mode"><u>Configure Pairing Mode</u></string>
    <string name="teacher_section_settings_troubleshoot_devices"><u>Troubleshoot Devices</u></string>
    <string name="teacher_section_settings_pairing_mode_automatic">Pairing Mode:  Automatic</string>
    <string name="teacher_section_settings_pairing_mode_manual">Pairing Mode:  Manual (%s)</string>
    <string name="teacher_password_prompt">Please enter a new password and click save to confirm.</string>
    <string name="teacher_password_error">Invalid password. Please choose another password.</string>
    <string name="ble_settings_pairing_mode_automatic_description">BLE pairing for this device type is in automatic mode, which means that the app will connect to the first device that is broadcasting.</string>
    <string name="ble_settings_pairing_mode_manual_description">BLE pairing for this device type is in manual mode, which means that the app will only connect to a device broadcasting with the matching SSID. Select a nearby device from the list below or manually enter a device SSID.</string>
    <string name="ble_settings_troubleshoot_devices_index_description">This page is intended for troubleshooting bluetooth devices that pair with the MindfulNest app. Select one of the devices below to begin.</string>
    <string name="ble_settings_button_enter_device_name"><u>Enter a device name manually</u></string>
    <string name="alert_title_ble_select">Confirm Device SSID</string>
    <string name="alert_message_ble_select">Set default SSID to \'%s\'?</string>
    <string name="alert_title_ble_manual">Manual Device SSID</string>
    <string name="alert_message_ble_manual">Please enter an SSID and click to confirm.</string>
    <string name="alert_title_permissions_camera">Camera Permissions</string>
    <string name="alert_message_permissions_camera">Camera permissions are currently disabled. Please go to system settings to enable camera permissions.</string>
    <string name="highlights_design_info_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="highlights_design_info_description_classroom">This section lists all of the students in the classroom. The colors correspond to the emotion images listed below. A gray circle indicates no use in the specified time.</string>
    <string name="highlights_design_info_description_emotion_log">This weekly view displays all of the sessions for the student in the past week. Every listed box indicates a session from that day, along with the chosen activities and total length of the session. The colors correspond to the emotion images listed below.</string>
    <string name="highlights_design_info_description_monthly_overview">This section compares tool usage across the entire classroom over the past several days, weeks, and months, each with a color associated with the selected emotions. The colors correspond to the emotion images listed below. A gray circle indicates no use in the specified time.</string>
    <string name="highlights_design_info_description_coping_skills_classroom">This section lists the breakdown of coping skills used in the classroom by all students. The most used coping skill is the largest circle which appears on the left-hand side.</string>
    <string name="highlights_design_info_description_coping_skills_student">This section lists the breakdown of coping skills used by this student. The most used coping skill is the largest circle which appears on the left-hand side.</string>
    <string name="highlights_design_info_description_pattern_highlights_skills_student">This section highlights patterns in your classroom. This includes detecting changes in trends of emotions (both as students and the class as a whole), noticing when the class is doing a lot of physical activity, and more.</string>
    <string name="pattern_highlights_title">Coming Soon: students with interesting patterns in their usage will display here.</string>
    <string name="pattern_highlights_t0_title">T0 Pattern: No students highlighted (Null pattern)</string>
    <string name="pattern_highlights_t0_description">This is a test pattern, which should always result in an empty list of students.</string>
    <string name="pattern_highlights_t1_title">T1 Pattern: At least 1 student exists</string>
    <string name="pattern_highlights_t1_description">This is a test pattern, determines if at least one student exists and then displays it.</string>
    <string name="highlights_design_drawer_item_settings">App Settings</string>
    <string name="highlights_design_drawer_item_classes">Classes</string>
    <string name="highlights_design_drawer_item_class_name_placeholder">Class Name</string>
    <string name="highlights_design_drawer_navigate_back">Back to Previous</string>
</resources>