<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerHighlights"
    style="@style/DrawerTeacherSection"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintNavigateBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/imageButtonBackArrow"
            android:layout_width="20dp"
            android:layout_height="0dp"
            app:tint="#1c8773"
            android:src="@mipmap/ic_arrow_back"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewBack"
            app:layout_constraintBottom_toBottomOf="@id/textViewBack"
            app:layout_constraintEnd_toStartOf="@id/textViewBack"
            />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/highlights_design_drawer_navigate_back"
            android:textSize="14dp"
            android:textColor="#1c8773"
            android:layout_marginStart="30dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <org.cmucreatelab.android.flutterprek.activities.teacher_section.highlights_design.views.HighlightsViewDrawerItem
        android:id="@+id/constraintRowAppSettings"
        app:highlights_drawer_item_text="@string/highlights_design_drawer_item_settings"
        app:highlights_drawer_item_selected="false"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintNavigateBack"
        />

    <org.cmucreatelab.android.flutterprek.activities.teacher_section.highlights_design.views.HighlightsViewDrawerItem
        android:id="@+id/constraintRowClassesIndex"
        app:highlights_drawer_item_text="@string/highlights_design_drawer_item_classes"
        app:highlights_drawer_item_selected="false"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintRowAppSettings"
        />

    <org.cmucreatelab.android.flutterprek.activities.teacher_section.highlights_design.views.HighlightsViewDrawerItem
        android:id="@+id/constraintRowClassShow"
        app:highlights_drawer_item_text="@string/highlights_design_drawer_item_class_name_placeholder"
        app:highlights_drawer_item_selected="false"
        android:layout_marginTop="16dp"
        android:layout_marginStart="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintRowClassesIndex"
        />


</androidx.constraintlayout.widget.ConstraintLayout>


