<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOffWhite" >

        <fragment
            android:id="@+id/appHeader"
            android:name="org.cmucreatelab.android.flutterprek.activities.fragments.AppHeaderFragment"
            android:layout_width="match_parent"
            android:layout_height="65sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appHeader" >

            <TextView
                android:id="@+id/textViewTeacherLoginPrompt"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:lines="2"
                android:gravity="center"
                android:textColor="@color/colorDarkGray"
                android:textSize="16sp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/teacher_login_prompt" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:ems="10"
                android:inputType="textPassword"
                android:background="@drawable/background_text_input" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:text="@string/teacher_login_button" />

            <TextView
                android:id="@+id/textViewErrorPrompt"
                android:visibility="invisible"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:lines="1"
                android:gravity="center"
                android:textColor="@color/colorError"
                android:textSize="16sp"
                android:fontFamily="@font/source_sans_pro"
                android:text="@string/teacher_login_error" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>