<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/StudentSectionText"
            android:text="@string/heart_beating_prompt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/viewBeatingSlow"
                style="@style/NonGridViewItem">

                <ImageView
                    android:id="@+id/imageViewBeatingSlow"
                    android:src="@drawable/heart"
                    android:padding="20sp"
                    style="@style/GridViewItemThumbnail.FitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text1"
                    android:text="@string/heart_beating_slow"
                    style="@style/GridViewItemLowerTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/viewBeatingFast"
                style="@style/NonGridViewItem">

                <ImageView
                    android:id="@+id/imageViewBeatingFast"
                    android:src="@drawable/heart"
                    android:padding="20sp"
                    style="@style/GridViewItemThumbnail.FitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text2"
                    android:text="@string/heart_beating_fast"
                    style="@style/GridViewItemLowerTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

</android.support.constraint.ConstraintLayout>