<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerTeacherMain"
    style="@style/DrawerTeacherSection"
    android:layout_height="match_parent">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawer_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/highlightViewActiveClass"
            style="@style/DrawerTeacherSectionHighlighted"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewActiveClass"
            style="@style/DrawerTeacherSectionText"
            android:text="@string/mindfulnest_header_active_class"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/highlightViewActiveClass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/highlightViewActiveClass"
            app:layout_constraintTop_toTopOf="@+id/highlightViewActiveClass" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawer_title_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintRow1">

        <View
            android:id="@+id/highlightViewClasses"
            style="@style/DrawerTeacherSectionHighlighted"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewClasses"
            style="@style/DrawerTeacherSectionText"
            android:text="@string/mindfulnest_header_classes"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/highlightViewClasses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/highlightViewClasses"
            app:layout_constraintTop_toTopOf="@+id/highlightViewClasses" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintRow3"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawer_title_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintRow2">

        <View
            android:id="@+id/highlightViewCopingSkills"
            style="@style/DrawerTeacherSectionHighlighted"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCopingSkills"
            style="@style/DrawerTeacherSectionText"
            android:text="@string/mindfulnest_header_coping_skills"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/highlightViewCopingSkills"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/highlightViewCopingSkills"
            app:layout_constraintTop_toTopOf="@+id/highlightViewCopingSkills" />

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintRow4"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/drawer_title_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintRow3">

        <View
            android:id="@+id/highlightViewEmotions"
            style="@style/DrawerTeacherSectionHighlighted"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEmotions"
            style="@style/DrawerTeacherSectionText"
            android:text="@string/mindfulnest_header_emotions"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/highlightViewEmotions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/highlightViewEmotions"
            app:layout_constraintTop_toTopOf="@+id/highlightViewEmotions" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>